<resources>

    <string name="app_name">Insomniac</string>


    //ne znam cemu i random
    <string name="title_activity_mainactivity">MainActivity</string>
    <string name="title_activity_listviewcheckboxesactivity">ListViewCheckboxesActivity</string>
    <string name="textview">TextView</string>
    <string name="title_activity_worrybook">WorryBook</string>
    <string name="title_activity_learnmore">LearnMore</string>
    <string name="button">Button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="time_current">time_current</string>
    <string name="time_selected">time_selected</string>
    <string name="time_save">time_save</string>
    <string name="time_pick">time_pick</string>

    //staro kad sam morao da ih odvojim od icone
    <string name="LearnMore">\u00A0 Learn More</string>
    <string name="Learnmore">\u00A0 Learn More</string>
    <string name="WorryBook">\u00A0 Worry Book</string>
    <string name="Worrybook">\u00A0 Worry Book</string>
    <string name="Checklist">\u00A0 Checklist </string>
    <string name="checkbox">\u00A0 checkbox</string>
    <string name="Reminder">\u00A0 Reminders</string>
    <string name="MainActivityTitle">\u00A0 Insomniac \u00A0</string>


    //Alarms
    <string name="set_reminders">\u00A0 Set reminders</string>
    <string name="morning_reminder">\u00A0 Morning reminder</string>
    <string name="daily_reminder">\u00A0 Daily reminder</string>
    <string name="nightly_reminder">\u00A0 Nightly reminder</string>
    <string name="alarm_off_on">Alarm Off/On</string>
    <string name="on">On</string>
    <string name="off">Off</string>


    //Worry time
    <string name="worry_time">\u00A0 Worry time</string>


    //Checklist
    <string name="reset_checklist">Reset Checklist</string>
    <string name="clear_checked">clear_checked</string>
    <string name="reset">Reset</string>
    <string name="reset_checklst">Reset checklst</string>
    <string name="about_insomniac">\u00A0 About Insomniac</string>
    <string name="clear_all">Clear all</string>

    //Linkovi
    <string name="jedan"><a href="https://www.ncbi.nlm.nih.gov/pubmed/19640748">1. Bonnet, M. H., and Arand, D. L. (2010). Hyperarousal and insomnia: State of the science. Sleep Medicine Reviews, 14(1), 9–15.\n\n</a></string>
    <string name="dva"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3914473/">2. Stoffers, D., Altena, E., van der Werf, Y. D., Sanz-Arigita, E. J., Voorn, T. A., Astill, R. G., … Van Someren, E. J. W. (2014). The caudate: a key node in the neuronal network imbalance of insomnia? Brain, 137(2), 610–620. \n\n</a></string>
    <string name="tri"><a href="https://www.ncbi.nlm.nih.gov/pubmed/25596964">3. Kredlow, M. A., Capozzoli, M. C., Hearon, B. A., Calkins, A. W., and Otto, M. W. (2015). The effects of physical activity on sleep: a meta-analytic review. Journal of Behavioral Medicine, 38(3), 427–449.\n\n </a></string>
    <string name="cetiri"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2270041/">4. Zeitzer, J. M., Dijk, D.-J., Kronauer, R. E., Brown, E. N., and Czeisler, C. A. (2000). Sensitivity of the human circadian pacemaker to nocturnal light: melatonin phase resetting and suppression. The Journal of Physiology, 526(3), 695–702.\n\n </a></string>
    <string name="pet"><a href="https://www.ncbi.nlm.nih.gov/pubmed/15585546">5. Cajochen, C., Münch, M., Kobialka, S., Kräuchi, K., Steiner, R., Oelhafen, P., Wirz-Justice, A. (2005). High Sensitivity of Human Melatonin, Alertness, Thermoregulation, and Heart Rate to Short Wavelength Light. The Journal of Clinical Endocrinology and Metabolism, 90(3), 1311–1316.\n\n </a></string>
    <string name="sest"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1402564/">6. Březinová, V. (1974). Effects of caffeine on sleep: EEG study in late middle age people. British Journal of Clinical Pharmacology, 1(3), 203–208.\n\n  </a></string>
    <string name="sedam"><a href="https://www.ncbi.nlm.nih.gov/pubmed/6851408">7. Levy, M., and Zylber-Katz, E. (1983). Caffeine metabolism and coffee-attributed sleep disturbances. Clinical Pharmacology and Therapeutics, 33(6), 770–775.\n\n </a></string>
    <string name="osam"><a href="http://www.sciencedirect.com/science/article/pii/0005796783902061">8. Borkovec, T. D., Wilkinson, L., Folensbee, R., and Lerman, C. (1983). Stimulus control applications to the treatment of worry. Behaviour Research and Therapy, 21(3), 247–251.\n\n </a></string>
    <string name="devet"><a href="http://journals.sagepub.com/doi/abs/10.1177/0145445512455661?journalCode=bmoa">9. McGowan, S. K., and Behar, E. (2013). A preliminary investigation of stimulus control training for worry: effects on anxiety and insomnia. Behavior Modification, 37(1), 90–112.\n\n  </a></string>

    //Tekstovi
    <string name="n_insomniac_aims_to_help_people_with_chronic_insomnia_to_control_their_arousal_and_improve_their_sleep_quality_we_have_created_a_checklist_to_help_you_to_better_manage_control_of_potential_physiological_stressors_that_can_prevent_you_from_falling_and_staying_asleep_as_well_as_techniques_that_are_shown_to_be_beneficial_for_the_sleep_quality_n_n_insomniac_is_not_intended_for_use_in_the_diagnosis_of_disease_or_other_conditions_or_in_the_cure_mitigation_treatment_or_prevention_of_disease_if_you_have_troubles_initiating_and_staying_asleep_you_should_talk_to_your_health_care_provider">\n Insomniac aims to help people with chronic insomnia to control their arousal and improve their sleep quality. We have created a Checklist to help you to better manage control of potential physiological stressors that can prevent you from falling and staying asleep, as well as techniques that are shown to be beneficial for the sleep quality. \n\n Insomniac is not intended for use in the diagnosis of disease or other conditions, or in the cure, mitigation, treatment or prevention of disease. If you have troubles initiating and staying asleep, you should talk to your health care provider.</string>
    <string name="psychological_research_have_shown_that_scheduling_a_time_of_the_day_for_worrying_about_problems_is_a_good_way_to_decrease_worry_anxiety_and_insomnia_see_8_9_during_the_evening_write_down_your_biggest_problems_and_postpone_thinking_about_them_for_the_certain_part_of_the_following_day">Psychological research have shown that scheduling a time of the day for worrying about problems is a good way to decrease worry, anxiety and insomnia (see 8, 9). During the evening, write down your biggest problems and postpone thinking about them for the certain part of the following day.</string>



    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This edit task has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="_5_excellent_4_very_good_3_good_2_fair_1_poor">5. Excellent 4. Very good 3. Good 2. Fair 1. Poor</string>
</resources>

