<?xml version="1.0" encoding="utf-8"?>
<!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to add a task description, and buttons to select a priority
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="#ffffff"
    android:scaleType = "centerCrop"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:id="@+id/alarmpopup"
    android:background="#282828"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- EditText for getting task description input -->
    <EditText
        android:id="@+id/editTextTaskDescription"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint=""
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/transparent_white"
        android:inputType="textCapSentences"

        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmToggle"
        android:text="Set Alarm"
        android:layout_gravity="left"
        android:layout_alignLeft="@+id/editTextTaskDescription"
        android:layout_alignStart="@+id/editTextTaskDescription"
        android:onClick="onToggleClicked"
        android:background="@drawable/green"
        style="@style/ButtonText222"
        android:layout_below="@+id/editTextTaskDescription"
        android:textOn="@string/off"
        android:textOff="@string/on"
        />

    <!-- Add button -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/green"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        android:onClick="onClickAddTask"
        android:text="@string/add_button"

        />




</RelativeLayout>